force-app/main/default/objects/ProgramRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הועבר למילוי טפסים</fullName>
            </value>
            <value>
                <fullName>הועבר לטיפול המפעיל</fullName>
            </value>
            <value>
                <fullName>נוצר קשר טלפוני עם המעסיק</fullName>
            </value>
            <value>
                <fullName>קיבל פרטים, שוקל הצטרפות</fullName>
            </value>
            <value>
                <fullName>מילא טפסים- בתהליך הצטרפות</fullName>
            </value>
            <value>
                <fullName>איסוף צרכים מהמעסיק</fullName>
            </value>
            <value>
                <fullName>השלמת מסמכים</fullName>
            </value>
            <value>
                <fullName>נחתם הסכם עם המעסיק</fullName>
            </value>
            <value>
                <fullName>המעסיק הצטרף להכשרה קיימת</fullName>
            </value>
            <value>
                <fullName>גיבוש קבוצת מעסיקים</fullName>
            </value>
            <value>
                <fullName>הושלם תהליך הגיוס</fullName>
            </value>
            <value>
                <fullName>המעסיק לא מעוניין להצטרף</fullName>
            </value>
            <value>
                <fullName>הבקשה נדחתה</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
            <value>
                <fullName>טיפול בערעור</fullName>
            </value>
            <value>
                <fullName>בטיפול המשרד</fullName>
            </value>
            <value>
                <fullName>תקציב נגמר</fullName>
            </value>
            <value>
                <fullName>הקצאת שוברים מלאה</fullName>
            </value>
            <value>
                <fullName>הקצאת שוברים חלקית</fullName>
            </value>
            <value>
                <fullName>אזל מלאי שוברים</fullName>
            </value>
            <value>
                <fullName>הושלם</fullName>
                <isActive>false</isActive>
                <label>הושלם</label>
            </value>
            <value>
                <fullName>המלצת רכז</fullName>
                <isActive>false</isActive>
                <label>המלצת רכז</label>
            </value>
            <value>
                <fullName>הצטרף לתוכנית</fullName>
                <isActive>false</isActive>
                <label>הצטרף לתוכנית</label>
            </value>
            <value>
                <fullName>לא מתאים</fullName>
                <isActive>false</isActive>
                <label>לא מתאים</label>
            </value>
            <value>
                <fullName>נדחה</fullName>
                <isActive>false</isActive>
                <label>נדחה</label>
            </value>
            <value>
                <fullName>נוצר קשר ע&quot;י התוכנית</fullName>
                <isActive>false</isActive>
                <label>נוצר קשר ע&quot;י התוכנית</label>
            </value>
            <value>
                <fullName>סיים את התוכנית</fullName>
                <isActive>false</isActive>
                <label>סיים את התוכנית</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>