force-app/main/default/objects/ProgramRequest__c/fields/StatusDate__c.field-meta.xml
<CustomField>
    <fullName>StatusDate__c</fullName>
    <label>StatusDate</label>
    <type>DateTime</type>
</CustomField>