force-app/main/default/objects/ProgramRequest__c/fields/Stock_Root_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Root_Type__c</fullName>
    <formula>TEXT(Voucher_Stock__r.Root_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סוג מסלול למלאי</label>
    <type>Text</type>
</CustomField>