force-app/main/default/objects/ProgramRequest__c/fields/Street_Train_Pract__c.field-meta.xml
<CustomField>
    <fullName>Street_Train_Pract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>רחוב הכשרה מעשית</label>
    <referenceTo>Street__c</referenceTo>
    <relationshipLabel>ProgramRequests (רחוב הכשרה מעשית)</relationshipLabel>
    <relationshipName>ProgramRequests2</relationshipName>
    <type>Lookup</type>
</CustomField>