force-app/main/default/objects/ProgramRequest__c/fields/Street_Train_Theo__c.field-meta.xml
<CustomField>
    <fullName>Street_Train_Theo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>רחוב הכשרה עיונית</label>
    <referenceTo>Street__c</referenceTo>
    <relationshipLabel>ProgramRequests (רחוב הכשרה עיונית)</relationshipLabel>
    <relationshipName>ProgramRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>