force-app/main/default/objects/ProgramRequest__c/fields/sumPaidFirstStage__c.field-meta.xml
<CustomField>
    <fullName>sumPaidFirstStage__c</fullName>
    <label>sum Paid First Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>