force-app/main/default/objects/ProgramRequest__c/fields/sumPaidSecondStage__c.field-meta.xml
<CustomField>
    <fullName>sumPaidSecondStage__c</fullName>
    <label>sum Paid Second Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>