force-app/main/default/objects/ProgramRequest__c/fields/Total_Sum_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Paid__c</fullName>
    <label>סכום ששולם</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>