force-app/main/default/objects/ProgramRequest__c/fields/TotalSumApproved__c.field-meta.xml
<CustomField>
    <fullName>TotalSumApproved__c</fullName>
    <description>סכום שאושר למענק</description>
    <label>סכום מענק שאושר</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>