force-app/main/default/objects/ProgramRequest__c/fields/Trainer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Mobile__c</fullName>
    <label>טלפון של החונך</label>
    <type>Phone</type>
</CustomField>