force-app/main/default/objects/ProgramRequest__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>הכשרה</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>