force-app/main/default/objects/ProgramRequest__c/fields/Training_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Training_Denial_Reason__c</fullName>
    <label>Training Denial Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>