force-app/main/default/objects/ProgramRequest__c/fields/Training_Location_Pract__c.field-meta.xml
<CustomField>
    <fullName>Training_Location_Pract__c</fullName>
    <label>מיקום הכשרה מעשית</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Requested_Root_Pract__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אצל המעסיק עצמו</fullName>
            </value>
            <value>
                <fullName>במוסד הכשרה מוכר</fullName>
            </value>
            <value>
                <fullName>במוסד הכשרה שאינו מוכר</fullName>
            </value>
            <value>
                <fullName>מבנה השייך לאיגוד מקצועי</fullName>
            </value>
            <value>
                <fullName>אצל אחד או יותר מהמעסיקים המאוגדים תחת האיגוד המקצועי</fullName>
            </value>
            <value>
                <fullName>אצל אחד או יותר מהמעסיקים בקבוצת מעסיקים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>