force-app/main/default/objects/ProgramRequest__c/fields/Training_Start_Date_f__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date_f__c</fullName>
    <formula>Training__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ת. פתיחה מתוכנן</label>
    <type>Date</type>
</CustomField>