force-app/main/default/objects/ProgramRequest__c/fields/Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Status__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אושר</fullName>
            </value>
            <value>
                <fullName>נדחה</fullName>
            </value>
            <value>
                <fullName>התחיל</fullName>
            </value>
            <value>
                <fullName>הוקפא</fullName>
            </value>
            <value>
                <fullName>הסתיים</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>