force-app/main/default/objects/ProgramRequest__c/fields/Training_Status_f__c.field-meta.xml
<CustomField>
    <fullName>Training_Status_f__c</fullName>
    <formula>TEXT( Training__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס הכשרה</label>
    <type>Text</type>
</CustomField>