force-app/main/default/objects/ProgramRequest__c/fields/Type_Requested_Root_Theo__c.field-meta.xml
<CustomField>
    <fullName>Type_Requested_Root_Theo__c</fullName>
    <label>סוג המסלול המבוקש - הכשרה עיונית</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הכשרה למעסיק</fullName>
                <label>הכשרה למעסיק 1</label>
            </value>
            <value>
                <fullName>הכשרה לקבוצת מעסיקים</fullName>
            </value>
            <value>
                <fullName>הכשרה בהובלה של איגוד מקצועי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>