force-app/main/default/objects/ProgramRequest__c/fields/UserEmail_f__c.field-meta.xml
<CustomField>
    <fullName>UserEmail_f__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserEmail f</label>
    <type>Text</type>
</CustomField>