force-app/main/default/objects/ProgramRequest__c/fields/UserMobile_f__c.field-meta.xml
<CustomField>
    <fullName>UserMobile_f__c</fullName>
    <formula>CreatedBy.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserMobile f</label>
    <type>Text</type>
</CustomField>