force-app/main/default/objects/ProgramRequest__c/fields/Voucher_Stock__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מלאי</label>
    <referenceTo>Voucher_Stock__c</referenceTo>
    <relationshipLabel>תוכניות למעסיק</relationshipLabel>
    <relationshipName>ProgramRequests</relationshipName>
    <type>Lookup</type>
</CustomField>