force-app/main/default/objects/ProgramRequest__c/fields/vouchers_approved__c.field-meta.xml
<CustomField>
    <fullName>vouchers_approved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>כמות שוברים מאושרת להקצאה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>