force-app/main/default/objects/ProgramRequest__c/recordTypes/Atidaim.recordType-meta.xml
<RecordType>
    <fullName>Atidaim</fullName>
    <active>true</active>
    <label>עתידאים</label>
</RecordType>