force-app/main/default/objects/ProgramRequest__c/recordTypes/Disabilities_Support.recordType-meta.xml
<RecordType>
    <fullName>Disabilities_Support</fullName>
    <active>true</active>
    <label>תמיכת בהעסקת אנשים עם מוגבלות</label>
</RecordType>