force-app/main/default/objects/ProgramRequest__c/recordTypes/Employers_Guidance.recordType-meta.xml
<RecordType>
    <fullName>Employers_Guidance</fullName>
    <active>false</active>
    <label>ליווי והכוונת מעסיקים</label>
</RecordType>