force-app/main/default/objects/ProgramRequest__c/recordTypes/Factory_Class.recordType-meta.xml
<RecordType>
    <fullName>Factory_Class</fullName>
    <active>true</active>
    <label>כיתה במפעל</label>
</RecordType>