force-app/main/default/objects/ProgramRequest__c/recordTypes/Green_Course_College.recordType-meta.xml
<RecordType>
    <fullName>Green_Course_College</fullName>
    <active>true</active>
    <label>מסלול ירוק מכללות</label>
</RecordType>