force-app/main/default/objects/ProgramRequest__c/recordTypes/Green_Course_Employer.recordType-meta.xml
<RecordType>
    <fullName>Green_Course_Employer</fullName>
    <active>true</active>
    <label>מסלול ירוק מעסיקים</label>
</RecordType>