force-app/main/default/objects/ProgramRequest__c/recordTypes/National_Program.recordType-meta.xml
<RecordType>
    <fullName>National_Program</fullName>
    <active>true</active>
    <label>תוכנית לאומית</label>
</RecordType>