force-app/main/default/objects/ProgramRequest__c/recordTypes/OJT_Recommendation.recordType-meta.xml
<RecordType>
    <fullName>OJT_Recommendation</fullName>
    <active>true</active>
    <label>הכשרה בעבודה</label>
</RecordType>