force-app/main/default/objects/ProgramRequest__c/recordTypes/Online_Courses.recordType-meta.xml
<RecordType>
    <fullName>Online_Courses</fullName>
    <active>true</active>
    <label>קורסים מקוונים</label>
</RecordType>