force-app/main/default/objects/ProgramRequest__c/recordTypes/Recruiting_Employees.recordType-meta.xml
<RecordType>
    <fullName>Recruiting_Employees</fullName>
    <active>true</active>
    <label>איתור וגיוס עובדים</label>
</RecordType>