force-app/main/default/objects/ProgramRequest__c/recordTypes/Shovar_Lamaasik.recordType-meta.xml
<RecordType>
    <fullName>Shovar_Lamaasik</fullName>
    <active>true</active>
    <label>שובר למעסיק</label>
</RecordType>