force-app/main/default/objects/ProgramRequest__c/recordTypes/SKILLUP.recordType-meta.xml
<RecordType>
    <fullName>SKILLUP</fullName>
    <active>true</active>
    <label>SKILLUP</label>
</RecordType>