force-app/main/default/objects/ProgramRequest__c/recordTypes/Starter.recordType-meta.xml
<RecordType>
    <fullName>Starter</fullName>
    <active>true</active>
    <label>סטארטר</label>
</RecordType>