force-app/main/default/objects/ProgramRequest__c/recordTypes/State_funded_courses.recordType-meta.xml
<RecordType>
    <fullName>State_funded_courses</fullName>
    <active>false</active>
    <label>קורסים במימון המדינה</label>
</RecordType>