force-app/main/default/objects/ProgramRequest__c/validationRules/Approving_Vouchers_Once.validationRule-meta.xml
<ValidationRule>
    <fullName>Approving_Vouchers_Once</fullName>
    <active>true</active>
    <description>בחירת מספר שוברים מאושרים להקצאה רק פעם אחת</description>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;
ISCHANGED(vouchers_approved__c)&amp;&amp;
PRIORVALUE(vouchers_approved__c) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>vouchers_approved__c</errorDisplayField>
    <errorMessage>ניתן לאשר שוברים להקצאה רק פעם אחת</errorMessage>
</ValidationRule>