force-app/main/default/objects/ProgramRequest__c/validationRules/Dont_allow_Employers_Guidance_PR.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_allow_Employers_Guidance_PR</fullName>
    <active>true</active>
    <description>יש למנוע יצירת המלצה למעסיק עבור תוכנית ליווי והכוונת מעסיקים</description>
    <errorConditionFormula>Program__r.External_Program_Id__c = &quot;employerstraining&quot;</errorConditionFormula>
    <errorMessage>לא ניתן להמליץ על תוכנית &quot;ליווי והכוונת מעסיקים&quot;. אנא בחרו תוכנית אחרת</errorMessage>
</ValidationRule>