force-app/main/default/objects/ProgramRequest__c/validationRules/Up_to_10_Vouchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Up_to_10_Vouchers</fullName>
    <active>true</active>
    <description>לא ניתן לאשר יותר מ10 שוברים</description>
    <errorConditionFormula>vouchers_approved__c &gt; 10</errorConditionFormula>
    <errorDisplayField>vouchers_approved__c</errorDisplayField>
    <errorMessage>לא ניתן לממש מעל 10 שוברים</errorMessage>
</ValidationRule>