force-app/main/default/objects/ProgramRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>Program__c</columns>
    <columns>Account_Name_f_PR__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Achshahra</role>
        <role>Employers_Rep</role>
    </sharedTo>
</ListView>