force-app/main/default/objects/ProgramRequest__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request__c</columns>
    <columns>Training__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Employers_Rep</role>
    </sharedTo>
</ListView>