force-app/main/default/objects/ProgramRequest__c/listViews/My_ProgramRequest.listView-meta.xml
<ListView>
    <fullName>My_ProgramRequest</fullName>
    <columns>Program__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>התוכניות למעסיק שלי</label>
    <sharedTo>
        <role>Achshahra</role>
        <role>Employers_Rep</role>
    </sharedTo>
</ListView>